--- a/Signin.html
+++ b/Signin.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, Sign in</title>
     <link rel="stylesheet" type="text/css" href="css3/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <img src="amazon-logo.png" width="300px" style="filter: invert()">
+
     <form class="loginForm">
         <p id="signInText">
         <h1>Log In</h1>
@@ -20,12 +22,13 @@
         <label for="password">Password</label>
         <input type="password" id="password"><br>
         <span id="pswd"><a href="#">Forgot your Password ?</a></span><br>
-        <button id="signInBtn" type="submit">Sign in</button>
+        <button id="signInBtn" type="submit">Sign in</button>&nbsp;
         <div class="nwac">
             <h2><span>New to Amazon ?</span></h2>
             <button id="newBtn">Create your New Account</button>
         </div>
     </form>
+    <a href="index.html">Go To Home</a>
     <hr id="footer">
     <div>
         <p class="links">
