--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Amazon.com</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="ContactUs.html">
   <link rel="stylesheet" href="CustomerService.html">
   <link rel="stylesheet" href="Signin.html">
   <link rel="stylesheet" href="Cart.html">
   <link rel="stylesheet" href="Return&orders.html">
+  <link rel="stylesheet" href="Products.html">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <header>
     <div class="header">
@@ -46,8 +46,8 @@
           <div class="light-font" id="return&orders"><a href="Return&orders.html">Returns</div>
           <div class="light-font"> & Orders</a></div>
         </div>
-        <div class="nav-cart border" id="cart"><a href="Cart.html">
-            <i class="fa-solid fa-cart-shopping"></i>&nbsp; Cart
+        <div class="nav-cart border" id="cart"><a href="Cart.html">Cart
+           <br><i class="fa-solid fa-cart-shopping"></i>&nbsp; 
           </a></div>
 
       </div>
@@ -57,8 +57,9 @@
             <div class="CustomerService" id="CustomerService">
               <div class="ContactUs" id="ContactUs">
                 <a href="#Home">Home</a>
-                <a href="#Products">Products</a>
+                <a href="Products.html">Products</a>
                 <a href="CustomerService.html">Customer Service</a>
+                <a href="#Products">Items</a>
                 <a href="#Aboutus">About Us</a>
                 <a href="ContactUs.html">Contact Us</a>
               </div>
@@ -80,7 +81,7 @@
             <h2>Gaming accessories</h2>
             <div class="box-img" style="background-image: url('Karu_Quad_Chair.jpg');">
             </div>
-            <p>$3000</p>
+            <p><button><i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$200</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -89,25 +90,25 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/61INtCQzv2L._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$400</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$500</a></button></p>
           </div>
         </div>
         <div class="box">
           <div class="box-content">
-            <h2>Home décor under $50</h2>
+            <h2>Smart Watches</h2>
             <div class="box-img"
-              style="background-image: url('https://m.media-amazon.com/images/I/71HRa8jJMiL._AC_UL480_FMwebp_QL65_.jpg');">
+              style="background-image: url('box11.jpg');">
             </div>
-            <p>$600</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$200</a></button></p>
           </div>
         </div>
         <div class="box">
           <div class="box-content">
-            <h2>Shop deals in Fashion</h2>
+            <h2>Gaming Laptop</h2>
             <div class="box-img"
-              style="background-image: url('https://m.media-amazon.com/images/I/71z1KW3XYOL._AC_UL480_FMwebp_QL65_.jpg');">
+              style="background-image: url('box9.jpg');">
             </div>
-            <p>$900</p>
+            <p><button>&nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html"> $50000</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -116,7 +117,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/71dFwOLrZgL._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$100</p>
+            <p><button>&nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$100</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -125,7 +126,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/71+pfu4jwdL._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$1000</p>
+            <p><button>&nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$300</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -134,16 +135,16 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/7144FcUnkiL._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$800</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$100</a></button></p>
           </div>
         </div>
         <div class="box">
           <div class="box-content">
-            <h2>Refresh your space</h2>
+            <h2>Refresh your Mind</h2>
             <div class="box-img"
-              style="background-image: url('https://m.media-amazon.com/images/I/81v4Q00FOyL._AC_UL480_FMwebp_QL65_.jpg');">
+              style="background-image: url('box10.jpg ');">
             </div>
-            <p>$700</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$200</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -152,7 +153,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/81Mya-dPIOL._AC_UY327_FMwebp_QL65_.jpg');">
             </div>
-            <p>$2000</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$1000</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -161,7 +162,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/81hLyL0rX2S._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$1000</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$20</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -170,7 +171,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/413QO-6AAVL._AC_UF480,480_SR480,480_.jpg');">
             </div>
-            <p>$300</p>
+            <p><button>&nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$10</a></button></p>
           </div>
         </div>
         <div class="box">
@@ -179,7 +180,7 @@
             <div class="box-img"
               style="background-image: url('https://m.media-amazon.com/images/I/61AUqdnhNgL._AC_UL480_FMwebp_QL65_.jpg');">
             </div>
-            <p>$500</p>
+            <p><button> &nbsp;<i class="fa fa-cart-arrow-down" aria-hidden="true"></i>&nbsp;<a href="Cart.html">$15</a></button></p>
   </section>
   </div>
   </div>
@@ -205,6 +206,8 @@
         <a href="Cart.html">Carts</a>&nbsp;
 
         <a href="ContactUs.html">Contact</a>&nbsp;
+
+        <a href="Products.html"> All Items</a>
       </ul>
       <ul>
         <p>Account & Lists</p>&nbsp;
@@ -239,5 +242,4 @@
     </div>
   </footer>
 </body>
-
 </html>
