--- a/Cart.html
+++ b/Cart.html
@@ -6,12 +6,60 @@
     <title>Cart</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css4/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="block">
+        <img class="img-logo" style="width: 110px;" src="amazon-logo.png">
+        <div class="address">
+            <i class="fa-solid fa-location-dot"></i>&nbsp;
+            <div class="inneraddress">
+                <div class="light-font"> Deliver to</div>
+                <div class="heavy-font"> India</div>
+            </div>
+        </div>
+
+        <div class="nav-search">
+            <select class="search-select">
+                <option>All</option>
+            </select>
+            <input type="text" name="id" placeholder=" Search Amazon.com " class="search-input">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+        <div class="account-holders">
+            <div class="light-font" id="signin"><a href="Signin.html">Hello, sign in</div>
+            <div class="heavy-font">Account & Lists</a></div>
+        </div>
+        <div class="return">
+            <div class="light-font" id="return&orders"><a href="Return&orders.html">Returns</div>
+            <div class="light-font"> & Orders</a></div>
+        </div>
+        <div class="nav-cart border" id="cart"><a href="Cart.html">
+                <i class="fa-solid fa-cart-shopping"></i>&nbsp; Cart
+            </a></div>
+
+    </div>
+    <div class="panel">
+        <div class="panel-ops">
+            <div class="Home" id="Home">
+                <div class="CustomerService" id="CustomerService">
+                    <div class="ContactUs" id="ContactUs">
+                        <a href="index.html">Home</a>
+                        <a href="Products.html">Products</a>
+                        <a href="CustomerService.html">Customer Service</a>
+                        <a href="index.html">About Us</a>
+                        <a href="ContactUs.html">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <h1 align="center">Your Cart</h1>
    <div class="container">
     <div class="Cart">
-        <img src="box13.jpg" alt="pc">
+        <img src="box3.jpg" alt="pc">
         <h3 style="color: #f0da1a">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -19,12 +67,12 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half"></i>
         </h3>
-        <h3>Dell Desktop Pc</h3>
-        <h3>$300</h3>
-        <Button>Add to Cart</Button>
+        <h3>Gaming Desktop Pc</h3>
+        <h3>$500</h3>
+        <Button>Buy now</Button>
     </div>
     <div class="Cart">
-        <img src="box12.jpg" alt="Chair">
+        <img src="Karu_Quad_Chair.jpg" alt="Chair">
         <h3 style="color: #f0da1a">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -32,9 +80,9 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half"></i>
         </h3>
-        <h3> Desktop Chair</h3>
-        <h3>$500</h3>
-        <Button>Add to Cart</Button>
+        <h3> Gaming Chair</h3>
+        <h3>$200</h3>
+        <Button>Buy now</Button>
     </div>
     <div class="Cart">
         <img src="box11.jpg" alt="watch">
@@ -47,7 +95,7 @@
         </h3>
         <h3>Smart Watch</h3>
         <h3>$900</h3>
-        <Button>Add to Cart</Button>
+        <Button>Buy now</Button>
     </div>
     <div class="Cart">
         <img src="box9.jpg" alt="laptop">
@@ -60,7 +108,7 @@
         </h3>
         <h3> Asus Tuff Gaming Laptop </h3>
         <h3>$50000</h3>
-        <Button>Add to Cart</Button>
+        <Button>Buy now</Button>
     </div>
     <div class="Cart">
         <img src="box10.jpg" alt="cup">
@@ -73,7 +121,7 @@
         </h3>
         <h3>Coffee Cup</h3>
         <h3>$200</h3>
-        <Button>Add to Cart</Button>
+        <Button>Buy now</Button>
     </div>
    </div> 
 </body>
