--- a/CustomerService.html
+++ b/CustomerService.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Service</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css2/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+    <nav>
+    <div class="block">
+        <img class="img-logo" style="width: 110px;" src="amazon-logo.png">
+        <div class="address">
+            <i class="fa-solid fa-location-dot"></i>&nbsp;
+            <div class="inneraddress">
+                <div class="light-font"> Deliver to</div>
+                <div class="heavy-font"> India</div>
+            </div>
+        </div>
+
+        <div class="nav-search">
+            <select class="search-select">
+                <option>All</option>
+            </select>
+            <input type="text" name="id" placeholder=" Search Amazon.com " class="search-input">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+        <div class="account-holders">
+            <div class="light-font" id="signin"><a href="Signin.html">Hello, sign in</div>
+            <div class="heavy-font">Account & Lists</a></div>
+        </div>
+        <div class="return">
+            <div class="light-font" id="return&orders"><a href="Return&orders.html">Returns</div>
+            <div class="light-font"> & Orders</a></div>
+        </div>
+        <div class="nav-cart border" id="cart"><a href="Cart.html">
+                <i class="fa-solid fa-cart-shopping"></i>&nbsp; Cart
+            </a></div>
+
+    </div>
+    <div class="panel">
+        <div class="panel-ops">
+            <div class="Home" id="Home">
+                <div class="CustomerService" id="CustomerService">
+                    <div class="ContactUs" id="ContactUs">
+                       <a href="index.html">Home</a>
+                       <a href="Products.html">Products</a>
+                       <a href="CustomerService.html">Customer Service</a>
+                        <a href="index.html">About Us</a>
+                        <a href="ContactUs.html">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <h1 class="section-heading">Welcome to Amazon Customer Service</h1>
-        <div class="services-cards">
+        <div class="services-card-container">
             <div class="services-card">
-                <h2><i class="fas fa-box"></i>&nbsp;A delivery, order or return</h2>
+                <i class="fas fa-box"></i>
+                <h2>A delivery, order or return</h2>
             </div>
             <div class="services-card">
-                <h2><i class="fas fa-lock"></i>&nbsp;Address, security & privacy</h2>
+                <i class="fas fa-lock"></i>
+                <h2>Address, security & privacy</h2>
             </div>
             <div class="services-card">
-                <h2><i class="fas fa-play"></i>&nbsp;eBooks, Prime Videos, Music or Games</h2>
+                <i class="fas fa-play"></i>
+                <h2>eBooks, Prime Videos, Music or Games</h2>
             </div>
             <div class="services-card">
-                <h2><i class="fas fa-user"></i>&nbsp;Memberships, subscriptions or communications</h2>
+                <i class="fas fa-user"></i>
+                <h2>Memberships, subscriptions or communications</h2>
             </div>
             <div class="services-card">
-                <h2><i class="fas fa-question mark"></i>&nbsp;Something else</h2>
+                <i class="fas fa-question mark"></i>
+                <h2>Something else</h2>
             </div>
         </div>
     </div>
 </body>
+
 </html>
